# dino-ball

./: Cargo.toml  README.md
.github/workflows/: pages.yml  release.yml
assets/: icon.icns
scripts/: make_icns.sh
src/: config.rs  main.rs  state.rs  types.rs  util.rs
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
